
  - StatementException wrapping will display the
    original exception class in the message.  

  - Failures on connect which raise dbapi.Error
    will forward the error to dialect.is_disconnect()
    and set the "connection_invalidated" flag if 
    the dialect knows this to be a potentially
    "retryable" condition.  Only Oracle ORA-01033
    implemented for now.  [ticket:2201]

- postgresql
  - Added new "postgresql_ops" argument to 
    Index, allows specification of PostgreSQL
    operator classes for indexed columns.
    [ticket:2198]  Courtesy Filip Zyzniewski.

- mysql
  - Fixed OurSQL dialect to use ansi-neutral 
    quote symbol "'" for XA commands instead
    of '"'.  [ticket:2186].  Also in 0.6.9.

- mssql
  - Adjusted the pyodbc dialect such that bound
    values are passed as bytes and not unicode
    if the "Easysoft" unix drivers are detected. 
    This is the same behavior as occurs with
    FreeTDS.  Easysoft appears to segfault
    if Python unicodes are passed under
    certain circumstances.

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].  Also in 0.6.9.

  - Added ORA-01033 to disconnect codes, which
    can be caught during a connection 
    event.  [ticket:2201]

  - repaired the oracle.RAW type which did not
    generate the correct DDL.  [ticket:2220]
    Also in 0.6.9.

  - added CURRENT to reserved word list.
    [ticket:2212] Also in 0.6.9.

-ext
  - Fixed bug in the mutable extension whereby
    if the same type were used twice in one
    mapping, the attributes beyond the first
    would not get instrumented.

  - Fixed bug in the mutable extension whereby
    if None or a non-corresponding type were set, 
    an error would be raised.  None is now accepted
    which assigns None to all attributes,
    illegal values raise ValueError.

- examples
  - Repaired the examples/versioning test runner
    to not rely upon SQLAlchemy test libs,