@@ -630,17 +630,19 @@ class SQLiteDialect(default.DefaultDialect):
         else:
             pragma = "PRAGMA "
         qtable = quote(table_name)
-        c = _pragma_cursor(connection.execute("%stable_info(%s)" % (pragma, qtable)))
+        c = _pragma_cursor(
+                    connection.execute("%stable_info(%s)" % 
+                    (pragma, qtable)))
         found_table = False
         columns = []
         while True:
             row = c.fetchone()
             if row is None:
                 break
-            (name, type_, nullable, default, has_default, primary_key) = (row[1], row[2].upper(), not row[3], row[4], row[4] is not None, row[5])
+            (name, type_, nullable, default, has_default, primary_key) = \
+                (row[1], row[2].upper(), not row[3], 
+                row[4], row[4] is not None, row[5])
             name = re.sub(r'^\"|\"$', '', name)
-            if default:
-                default = re.sub(r"^\'|\'$", '', default)
             match = re.match(r'(\w+)(\(.*?\))?', type_)
             if match:
                 coltype = match.group(1)
